<resources>
    <string name="app_name">Cost Manager</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login">"Login"</string>
    <string name="signup">"Sign Up"</string>
    <string name="create_account">"Create New Account"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="not_account_yet">Not account yet? Create one</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_income">IncomeActivity</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="re_enter_new_password">Re Enter New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="account_management">Account Management</string>
</resources>
