<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#FCFAEE">


    <TextView
        android:id="@+id/signin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:gravity="center"
        android:textSize="25dp"
        android:layout_margin="15dp"
        android:fontFamily="@font/chunkfive_regular"
        android:textColor="#73077E"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:drawableLeft="@drawable/username"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:layout_margin="8dp"
        android:drawableLeft="@drawable/password"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_margin="8dp"
        android:background="#2397EE"
        android:textSize="20dp"
        android:textStyle="italic"
        android:textColor="#FFFEFE"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_account_yet"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="#1D68B8"
        android:textStyle="italic"
        android:onClick="registerActivity"/>
</LinearLayout>